feat: add generate logic

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "generate": "esno ./src/scripts/generate.ts"
+    "generate": "rm -rf ./output && esno ./src/scripts/generate.ts"
   },
   "keywords": [],
   "author": "",
