feat: 记录已生成的素材id

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "generate": "rm -rf ./output && esno ./src/scripts/generate.ts"
+    "generate": "rm -rf ./output && esno ./src/scripts/generate.ts",
+    "test": "esno ./src/scripts/test.ts"
   },
   "keywords": [],
   "author": "",
