Revert "feat: 记录已生成的素材id"
This reverts commit 29f80e8be24af7878037fb8f59e7a101960d897c.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "generate": "rm -rf ./output && esno ./src/scripts/generate.ts",
-    "test": "esno ./src/scripts/test.ts"
+    "generate": "rm -rf ./output && esno ./src/scripts/generate.ts"
   },
   "keywords": [],
   "author": "",
