chore: add some material

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "generate": "rm -rf ./output/material ./output/json && esno ./src/scripts/generate.ts",
-    "generate:thumb": "rm -rf ./output/thumbs && esno ./src/scripts/generate.thumb.ts"
+    "generate:thumb": "rm -rf ./output/thumbs && esno ./src/scripts/generate.thumb.ts",
+    "modify:thumb": "esno ./src/scripts/modify-thumb-name.ts"
   },
   "keywords": [],
   "author": "",
